fix: 실수도 다루기위해 자료형 int에서 double로 수정